--- a/www/_themes/propio/templates/about.html
+++ b/www/_themes/propio/templates/about.html
@@ -3,7 +3,9 @@
   <div class="wrapper">
     <div class="big-inner-wrapper">
       <h1 class="big-heading">Sobre el grupo de investigación</h1>
-      <p class="big-p"></p>
+      <p class="big-p">
+      	{{content}}
+      </p>
       </div>
     </div>
 </div>
