--- a/www/_themes/propio/templates/news.html
+++ b/www/_themes/propio/templates/news.html
@@ -15,7 +15,9 @@
               <img src="http://lorempixel.com/200/300/" alt="">
             </figure>
             <div class="post-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, consequatur, saepe et velit quod nulla tenetur aut laudantium perspiciatis fugit temporibus libero culpa. Explicabo nihil voluptatibus numquam obcaecati neque porro.</p>
+              <p>
+                {{content}}
+              </p>
               <a class="more" href="#">Sigue leyendo<span class="icon icon-arrow-right"></a>
             </div>
           </div>
@@ -32,7 +34,9 @@
               <img src="http://lorempixel.com/200/300/abstract" alt="">
             </figure>
             <div class="post-text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, consequatur, saepe et velit quod nulla tenetur aut laudantium perspiciatis fugit temporibus libero culpa. Explicabo nihil voluptatibus numquam obcaecati neque onsequatur, saepe et velit quod nulla tenetur aut laudantium perspiciatis fugit temporibus libero culpa. Explicabo nihil voluptatibus numquam obcaecati neque onsequatur, saepe et velit quod nulla tenetur aut laudantium perspiciatis fugit temporibus libero culpa. Explicabo nihil voluptatibus numquam obcaecati neque onsequatur, saepe et velit quod nulla tenetur aut laudantium perspiciatis fugit temporibus libero culpa. Explicabo nihil voluptatibus numquam obcaecati neque </p>
+            <p>
+              {{content}}
+            </p>
             <a class="more" href="#">Sigue leyendo <span class="icon icon-arrow-right"></span></a>
           </div>
         </article>
