--- a/www/_themes/propio/templates/profile.html
+++ b/www/_themes/propio/templates/profile.html
@@ -8,8 +8,7 @@
             <img src="http://lorempixel.com/200/300/" alt="">
           </figure>
           <div class="post-text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum rerum aut quas vero velit cum ex doloremque facere ullam iusto! Nemo, in, adipisci quis amet laudantium eaque similique necessitatibus corporis?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, quaerat, asperiores, ratione, suscipit veritatis quam neque eveniet nobis blanditiis illo necessitatibus a quo corrupti est ut doloremque excepturi! Provident, deleniti.</p>
+            <p>{{content}}</p>
           </div>
         </div>
         <h4>Entre sus últimas publicaciones destacan:</h4>
