--- a/www/_themes/propio/templates/researches.html
+++ b/www/_themes/propio/templates/researches.html
@@ -4,36 +4,8 @@
     <div class="big-inner-wrapper">
        <p class="big-heading">Investigadores</p>
        <ul class="main-list list-sm">
-         <li><a href="profile.html">Juan García</a></li>
-         <li><a href="#">Pilar Fernández</a></li>
-         <li><a href="#">Juan García</a></li>
-         <li><a href="#">Juan García</a></li>
-         <li><a href="#">Carmen García Fernández</a></li>
-         <li><a href="#">Juan García</a></li>
-         <li><a href="#">Juan García</a></li>
-         <li><a href="#">Juan García</a></li>
-         <li><a href="#">Jonh Doe</a></li>
-         <li><a href="#">Juan García</a></li>
-         <li><a href="#">Juan García Ibáñez</a></li>
-         <li><a href="#">Juan García Ibáñez</a></li>
-         <li><a href="#">Juan García Ibáñez</a></li>
-         <li><a href="#">Juan García Ibáñez Rodríguez</a></li>
-       </ul>
-       <ul class="main-list list-sm">
-         <li><a href="#">Juan García Ibáñez</a></li>
-         <li><a href="#">Pilar Fernández Sánchez</a></li>
-         <li><a href="#">Juan García Ibáñez</a></li>
-         <li><a href="#">Juan García Ibáñez</a></li>
-         <li><a href="#">Juan García Ibáñez</a></li>
-         <li><a href="#">Juan García Ibáñez</a></li>
-         <li><a href="#">Juan García</a></li>
-         <li><a href="#">Pedro García</a></li>
-         <li><a href="#">Juan García Alonso</a></li>
-         <li><a href="#">Fernando Santos García</a></li>
-         <li><a href="#">Juan García</a></li>
-         <li><a href="#">Juan García</a></li>
-         <li><a href="#">Juan García</a></li>
-         <li><a href="#">María López Zamora</a></li>
+         <li><a href="{{ url }}">{{ name }}</a></li>
+        {{categories}}
        </ul>
     </div>
   </div>
