a lot of configuration changes

--- a/www/_themes/propio/partials/footer.html
+++ b/www/_themes/propio/partials/footer.html
@@ -12,7 +12,7 @@
       </a>
     </div>
     <div class="sub-footer">
-      <p>&copy 2014</p>
+      <p>Hoy es {{ current_date }} &copy 2014</p>
     </div>
 	</div>
 </footer>
