--- a/www/_themes/propio/layouts/default.html
+++ b/www/_themes/propio/layouts/default.html
@@ -1,5 +1,15 @@
 <!doctype html>
 <html lang="en">
+{{ if is_dev }}
+<!--
+
+debug information
+---------------------------------------------------------
+{{ _debug|dump }}
+---------------------------------------------------------
+
+-->
+{{ endif }}
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
