--- a/www/_themes/propio/templates/credits.html
+++ b/www/_themes/propio/templates/credits.html
@@ -4,13 +4,8 @@
 		<div class="big-inner-wrapper">
 			<h1 class="big-heading">Créditos</h1>
 			<ul class="main-list">
-				<li>Redacción: Pepito García</li>
-				<li>Equipo de redacción: Pepito García, Juanito Fernández</li>
-				<li>Créditos fotográficos
-					<p>Imagen de cabecera: <em>The Professor’s Dream, </em> Charles Robert Cockerell, 1848. Royal  Academy of Arts, London.</p>
-				</li>
+				{{content}}
 			</ul>
-
 		</div>
 	</div>
 </div>
