changes in templates

--- a/www/_themes/propio/layouts/default.html
+++ b/www/_themes/propio/layouts/default.html
@@ -33,9 +33,7 @@ debug information
 				<div class="inner-wrapper">
 					<div class="title">
 						<h1 class="bold-heading"><a href="{{ homepage }}">{{ _site_name}}</a></h1>
-						<span class="subtitle">
-							{{subtitle}}
-						</span>
+						<span class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus in doloremque ad, cum nesciunt. Asperiores placeat et, </span>
 					</div><form action="#" class="main-form">
 	        	<input type="text" placeholder="Search">
 	      	</form>
