--- a/www/_themes/propio/templates/profile.html
+++ b/www/_themes/propio/templates/profile.html
@@ -2,33 +2,19 @@
 <div class="main-content">
   <div class="wrapper">
     <div class="big-inner-wrapper">
-       <h1 class="big-heading">Pilar Rodríguez Sánchez</h1>
+       <h1 class="big-heading"> {{ title }}</h1>
         <div class="post-box">
-          <figure>
-            <img src="http://lorempixel.com/200/300/" alt="">
-          </figure>
+          {{ if image }}
+            <figure style="background: url({{ image }}) center no-repeat; background-size: contain; ">
+            </figure>
+          {{ endif }}
           <div class="post-text">
             <p>{{content}}</p>
           </div>
         </div>
         <h4>Entre sus últimas publicaciones destacan:</h4>
         <ul class="main-list">
-          <li>
-            <a href="#">Titulo de un articulo</a>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, sunt maxime maiores quibusdam autem velit tempore eum asperiores inventore eos voluptatibus quis eveniet soluta omnis laborum optio facere laudantium sit.
-          </li>
-          <li>
-            <a href="#">Titulo de un articulo</a>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, sunt maxime maiores quibusdam autem velit tempore eum asperiores inventore eos voluptatibus quis eveniet soluta omnis laborum optio facere laudantium sit.
-          </li>
-          <li>
-            <a href="#">Titulo de un articulo</a>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, sunt maxime maiores quibusdam autem velit tempore eum asperiores inventore eos voluptatibus quis eveniet soluta omnis laborum optio facere laudantium sit.
-          </li>
-          <li>
-            <a href="#">Titulo de un articulo</a>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, sunt maxime maiores quibusdam autem velit tempore eum asperiores inventore eos voluptatibus quis eveniet soluta omnis laborum optio facere laudantium sit.
-          </li>
+          {{content}}
         </ul>
     </div>
   </div>
