--- a/www/_themes/propio/templates/researches.html
+++ b/www/_themes/propio/templates/researches.html
@@ -2,11 +2,11 @@
 <div class="main-content">
   <div class="wrapper">
     <div class="big-inner-wrapper">
-       <p class="big-heading">Investigadores</p>
+       <p class="big-heading">{{ title }}</p>
        <ul class="main-list list-sm">
-       	{{ entries:listing folder="investigadores" }}
+       	{{ pages:listing }}
          <li><a href="{{ url }}">{{ title }}</a></li>
-        {{ /entries:listing }}
+        {{ /pages:listing }}
        </ul>
     </div>
   </div>
