--- a/www/_themes/propio/templates/blog.html
+++ b/www/_themes/propio/templates/blog.html
@@ -15,7 +15,7 @@
               {{ member }}
             </div>
             {{ if image }}
-              <figure style="background: url({{ image }}) center no-repeat; background-size: contain; ">
+              <figure style="background: url({{ image }})">
               </figure>
             {{ endif }}
             <div class="post-text">
