--- a/www/_themes/propio/templates/blog-entry.html
+++ b/www/_themes/propio/templates/blog-entry.html
@@ -4,7 +4,7 @@
 			<h1 class="bold-heading">{{ title }}</h1>
 				<div class="post-entry">
             {{ if image }}
-              <figure style="background: url({{ image }}) center no-repeat; background-size: contain; ">
+              <figure style="background: url({{ image }}) center no-repeat; background-size: cover; ">
               </figure>
             {{ endif }}
 					<div class="post-text">
