--- a/www/_themes/propio/templates/profile.html
+++ b/www/_themes/propio/templates/profile.html
@@ -5,7 +5,7 @@
        <h1 class="big-heading"> {{ title }}</h1>
         <div class="post-box">
           {{ if image }}
-            <figure style="background: url({{ image }}) center no-repeat; background-size: contain; ">
+            <figure style="background: url({{ image }}) center no-repeat; background-size: cover; ">
             </figure>
           {{ endif }}
           <div class="post-text">
