--- a/www/_themes/propio/templates/profile.html
+++ b/www/_themes/propio/templates/profile.html
@@ -9,13 +9,15 @@
             </figure>
           {{ endif }}
           <div class="post-text">
-            <p>{{content}}</p>
+            <p>{{ comment }}</p>
           </div>
         </div>
-        <h4>Entre sus últimas publicaciones destacan:</h4>
-        <ul class="main-list">
-          {{content}}
-        </ul>
+        <section>
+          <h4>Entre sus últimas publicaciones destacan:</h4>
+          <ul class="main-list">
+             {{ content }}
+          </ul>
+        </section>
     </div>
   </div>
 </div>
