--- a/www/_themes/propio/templates/publications.html
+++ b/www/_themes/propio/templates/publications.html
@@ -4,21 +4,9 @@
 		<div class="big-inner-wrapper">
 			<h1 class="big-heading">Publicaciones</h1>
 			<ul class="main-list">
-				<li>
-					<a href="#">“La República de las pequeñas diferencias: cultura(s) de izquierda y antifascismo(s) en España, 1931-1939″</a>de Hugo García. Diciembre de 2013
-				</li>
-				<li>
-					<a href="#">“El sueño afrancesado: Imaginar la América española como periferia del Imperio napoleónico”, </a>de Roberto García. Diciembre de 2013
-				</li>
-				<li>
-					<a href="#">“La República de las pequeñas diferencias: cultura(s) de izquierda y antifascismo(s) en España, 1931-1939″</a>de Hugo García. Diciembre de 2013
-				</li>
-				<li>
-					<a href="#">“Un lugar donde todo es posible: Sensibilidad romántica y pensamiento utópico en la España del siglo XIX” </a>de Juan García. Septiembre de 2013
-				</li>
-				<li>
-					<a href="#">“La República de las pequeñas diferencias: cultura(s) de izquierda y antifascismo(s) en España, 1931-1939″</a>de Hugo García. Diciembre de 2013
-				</li>
+				{{ pages:listing }}
+         	<li><a href="{{ url }}">{{ title }}</a></li>
+        {{ /pages:listing }}
 			</ul>
 
 		</div>
