--- a/www/_themes/propio/templates/researches.html
+++ b/www/_themes/propio/templates/researches.html
@@ -4,9 +4,9 @@
     <div class="big-inner-wrapper">
        <p class="big-heading">{{ title }}</p>
        <ul class="main-list list-sm">
-       	{{ pages:listing }}
+       	{{ entries:listing }}
          <li><a href="{{ url }}">{{ title }}</a></li>
-        {{ /pages:listing }}
+        {{ /entries:listing }}
        </ul>
     </div>
   </div>
