--- a/www/_themes/propio/templates/publications.html
+++ b/www/_themes/propio/templates/publications.html
@@ -2,7 +2,7 @@
 <div class="main-content">
 	<div class="wrapper">
 		<div class="big-inner-wrapper">
-			<h1 class="big-heading">Publicaciones</h1>
+			<h1 class="big-heading"> {{ title }}</h1>
 			<section class="main-list">
          {{ content }}
       </section>
