--- a/www/_themes/propio/templates/bibliography.html
+++ b/www/_themes/propio/templates/bibliography.html
@@ -1,7 +1,7 @@
 <div class="main-content">
 	<div class="wrapper">
 		<div class="big-inner-wrapper">
-			<h1 class="big-heading">Bibliografía</h1>
+			<h1 class="big-heading">{{ title }}</h1>
 			<p class="big-p">
 				{{content}}
 			</p>
