--- a/www/_themes/propio/templates/taxonomies.html
+++ b/www/_themes/propio/templates/taxonomies.html
@@ -4,7 +4,7 @@
     <div class="inner-wrapper">
       <div class="gi two-thirds inline-block">
         <ul>
-        {{ entries:listing folder="blog" limit="6" sort_dir="desc" paginate="true" }}
+        {{ entries:listing folder="blog" limit="6" sort_dir="desc" paginate="true" taxonomy="true"}}
           <li class="post-box">
             <div class="post-title">
               <a href="{{ url }}">
