--- a/www/_themes/propio/partials/sidebar.html
+++ b/www/_themes/propio/partials/sidebar.html
@@ -1,4 +1,5 @@
 <aside class="gi one-third inline-block">
+	<h3 class="sidebar-title">Posts</h3>
   <ul class="sidebar-list">
   	{{ entries:listing folder="blog" limit="6" sort_dir="desc" }}
   	  {{ if no_results }}
@@ -7,5 +8,18 @@
   		  <li><a href="{{ url }}">{{ title }}</a></li>
   		{{ endif }}
   	{{ /entries:listing }}
+  </ul>
+  <h3 class="sidebar-title">Categorías</h3>
+  <ul class="sidebar-list">
+   {{ taxonomy:listing folder="blog" type="categories"}}
+   	 <li {{ if name == taxonomy_name}} class="on"{{ endif }}>
+   	 	<a href="{{ url }}">{{ name }} ({{ results }})</a></li>
+  	{{ /taxonomy:listing }}
+  </ul>
+  <h3 class="sidebar-title">Mes de publicación</h3>
+  <ul class="sidebar-list">
+   {{ taxonomy:listing folder="blog" since="29 Jun" }}
+   	 <li><a href="{{ url }}">{{ name }}</a></li>
+  	{{ /taxonomy:listing }}
   </ul>
 </aside>
