--- a/www/_themes/propio/css/propio.css
+++ b/www/_themes/propio/css/propio.css
@@ -686,22 +686,24 @@ table {
 /* line 5, ../sass/objects/_navegacion.scss */
 .main-nav {
   background: #333;
-  height: 50px;
+  /*height: 50px;*/
 }
 /* line 11, ../sass/objects/_navegacion.scss */
 .main-nav a {
-  color: #fff;
+  color: #6c868c;
   display: inline-block;
   padding: 15px 20px;
+  position: relative;
 }
 /* line 16, ../sass/objects/_navegacion.scss */
 .main-nav a:hover {
-  background: #4d4d4d;
+  color: #fff;
 }
+
 /* line 20, ../sass/objects/_navegacion.scss */
 .main-nav .on {
   font-weight: 700;
-  background: #4d4d4d;
+  color: #fff;
 }
 
 .main-nav a.on:before, .main-nav a.on:after {
@@ -714,9 +716,9 @@ table {
   height: 0;
   border: 6px solid transparent;
   border-bottom-color: #fff;
-  position: relative;
-  top: 4px;
-  left: 50%;
+  position: absolute;
+  bottom: 0;
+  left: 60px;
 }
 @media only screen and (max-width: 49.92857em) {
   /* line 26, ../sass/objects/_navegacion.scss */
