--- a/www/_themes/propio/partials/sidebar.html
+++ b/www/_themes/propio/partials/sidebar.html
@@ -1,4 +1,6 @@
 <aside class="gi one-third inline-block">
+  <h3 class="sidebar-title">Sobre el blog</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum magni autem facilis fugit labore quas odit illo officiis voluptatibus inventore aliquam ab</p>
 	<h3 class="sidebar-title">Posts</h3>
   <ul class="sidebar-list">
   	{{ entries:listing folder="blog" limit="6" sort_dir="desc" }}
