--- a/www/_themes/propio/partials/footer.html
+++ b/www/_themes/propio/partials/footer.html
@@ -8,7 +8,7 @@
         <span class="icon icon-twitter"></span>
       </a>
       <a href="#">
-        <span class="icon icon-googleplus"></span>
+        <span class="icon icon-google-plus"></span>
       </a>
     </div>
     <div class="sub-footer">
