--- a/www/_themes/propio/partials/nav.html
+++ b/www/_themes/propio/partials/nav.html
@@ -1,5 +1,3 @@
-<div class="main-nav">
-	<div class="large-screen" role="navigation">
-		{{ nav from="/" }}<a href="{{ url }}"{{ if is_current || is_parent }} class="on"{{ endif }}>{{ title }}</a>{{ /nav }}
-	</div>
-</div><!--end of main-nav-->
+<ul class="main-nav">
+	{{ nav from="/" }}<li><a href="{{ url }}"{{ if is_current || is_parent }} class="on"{{ endif }}>{{ title }}</a></li>{{ /nav }}
+</ul><!--end of main-nav-->
