--- a/www/_themes/propio/partials/nav.html
+++ b/www/_themes/propio/partials/nav.html
@@ -1,3 +1,3 @@
 <ul class="main-nav">
-	{{ nav from="/" }}<li><a href="{{ url }}"{{ if is_current || is_parent }} class="on"{{ endif }}>{{ title }}</a></li>{{ /nav }}
+	{{ nav from="/" }}<li><a href="{{ url }}"{{ if is_current || is_parent }} class="on"{{ endif }}><span>{{ title }}</span></a></li>{{ /nav }}
 </ul><!--end of main-nav-->
