--- a/www/_themes/propio/layouts/default.html
+++ b/www/_themes/propio/layouts/default.html
@@ -34,12 +34,12 @@ debug information
 					<div class="title">
 						<h1 class="bold-heading"><a href="{{ homepage }}">{{ _site_name}}</a></h1>
 						<span class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus in doloremque ad, cum nesciunt. Asperiores placeat et, </span>
-					</div><form action="#" class="main-form">
+					</div><!-- <form action="#" class="main-form">
 	        	<input type="text" placeholder="Search">
-	      	</form>
+	      	</form> -->
 	      	</div><!--end of inner-wrapper-->
 					<div class="hero">
-	      		<img src="http://lorempixel.com/1000/287/abstract/" alt="imagen grande">
+						<img src="/assets/img/hero2.jpg">
 	      		{{ theme:partial src="nav" }}
 	    		</div>
 	    	</div>
