--- a/www/_themes/propio/partials/sidebar.html
+++ b/www/_themes/propio/partials/sidebar.html
@@ -1,7 +1,7 @@
 <aside class="gi one-third inline-block">
   <h3 class="sidebar-title">Sobre el blog</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum magni autem facilis fugit labore quas odit illo officiis voluptatibus inventore aliquam ab</p>
-	<h3 class="sidebar-title">Posts</h3>
+	<h3 class="sidebar-title">Últimos posts</h3>
   <ul class="sidebar-list">
   	{{ entries:listing folder="blog" limit="6" sort_dir="desc" }}
   	  {{ if no_results }}
