--- a/www/_themes/propio/css/propio.css
+++ b/www/_themes/propio/css/propio.css
@@ -1148,3 +1148,20 @@ aside .sidebar-list li {
     display: block;
   }
 }
+
+/*------------------------------------------*\
+    PAGINATION
+\*------------------------------------------*/
+
+.pagination {
+  text-align: center;
+}
+
+.pagination a {
+  background: #ccc;
+  padding: .5em;
+  margin: .2em;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
