--- a/www/_themes/propio/templates/blog.html
+++ b/www/_themes/propio/templates/blog.html
@@ -39,5 +39,13 @@
         {{ /entries:pagination }}
         </section>
       </div>{{ theme:partial src="sidebar" }}
+      <div class="pagination">
+        <a href="#">
+          <span class="icon-long-arrow-left"></span>
+        </a>
+        <a href="#">
+          <span class="icon-long-arrow-right"></span>
+        </a>
+      </div>
   </div>
 </div>
