--- a/www/_themes/propio/layouts/default.html
+++ b/www/_themes/propio/layouts/default.html
@@ -39,7 +39,7 @@ debug information
 	      	</form> -->
 	      	</div><!--end of inner-wrapper-->
 					<div class="hero">
-						<img src="/assets/img/hero2.jpg">
+						<img src="/assets/img/books1.jpg">
 	      		{{ theme:partial src="nav" }}
 	    		</div>
 	    	</div>
