--- a/www/_themes/propio/templates/blog.html
+++ b/www/_themes/propio/templates/blog.html
@@ -40,12 +40,23 @@
         </section>
       </div>{{ theme:partial src="sidebar" }}
       <div class="pagination">
-        <a href="#">
-          <span class="icon-long-arrow-left"></span>
-        </a>
-        <a href="#">
-          <span class="icon-long-arrow-right"></span>
-        </a>
+        <ul class="pag-list">
+          <li>
+            <a href="#">
+              <span class="icon-prev2"></span>
+            </a>
+          </li><li>
+            <a href="#">1</a>
+          </li><li>
+            <a href="#">2</a>
+          </li><li>
+            <a href="#">3</a>
+          </li><li>
+            <a href="#">
+              <span class="icon-next2"></span>
+            </a>
+          </li>
+        </ul>
       </div>
   </div>
 </div>
