--- a/www/_themes/propio/templates/news.html
+++ b/www/_themes/propio/templates/news.html
@@ -2,44 +2,51 @@
 <div class="main-content">
 	<div class="wrapper">
 		<div class="inner-wrapper">
-			<h1 class="big-heading">Novedades</h1>
+			<h1 class="big-heading">{{ title }}</h1>
 			<article>
-          <div class="post-box">
-            <div class="post-title">
-              <a href="#">
-                <h2>¿Qué hacer con la historia de las emociones?</h2>
+        {{ entries:listing folder="novedades" limit="6" sort_dir="desc" paginate="true" }}
+          <div class="new-box">
+            <div class="new-title">
+              <a href="{{ url }}">
+                <h2>{{ title }}</h2>
               </a>
-              <span class="small">Posted on <a href="#">14 june</a> by <a href="#">Juan García</a></span>
+              {{ member:profile username=author }}
+                <span class="small">Publicado el <a href="{{ date }}">{{ date }}</a> por <a href="#"> {{ first_name }} {{ last_name}} </a></span>
+              {{ member }}
             </div>
-            <figure>
-              <img src="http://lorempixel.com/200/300/" alt="">
-            </figure>
-            <div class="post-text">
+            <!-- {{ if image }}
+            <figure class="left" style="background: url({{ image }});background-size: cover;"></figure>
+              {{ else }}
+            <figure class="left" style="background: url(/assets/img/woods.jpg);background-size: cover;"></figure>
+              {{ endif }} -->
+            <div class="new-text">
               <p>
-                {{content}}
+                {{ content }}
               </p>
-              <a class="more" href="#">Sigue leyendo<span class="icon icon-arrow-right"></a>
+            <!-- <a class="more" href="{{ url }}">Sigue leyendo<span class="icon icon-long-arrow-right"></a> -->
             </div>
           </div>
+          {{ /entries:listing }}
         </article>
-        <article>
-          <div class="post-box">
-            <div class="post-title">
+        <div class="pagination">
+          <ul class="pag-list">
+            <li>
               <a href="#">
-                <h2>¿Qué hacer con la historia de las emociones?</h2>
+                <span class="icon-prev2"></span>
               </a>
-              <span class="small">Posted on <a href="#">14 june</a> by <a href="#">Juan García</a></span>
-            </div>
-            <figure>
-              <img src="http://lorempixel.com/200/300/abstract" alt="">
-            </figure>
-            <div class="post-text">
-            <p>
-              {{content}}
-            </p>
-            <a class="more" href="#">Sigue leyendo <span class="icon icon-arrow-right"></span></a>
-          </div>
-        </article>
-		</div>
-	</div>
+            </li><li>
+              <a href="#">1</a>
+            </li><li>
+              <a href="#">2</a>
+            </li><li>
+              <a href="#">3</a>
+            </li><li>
+              <a href="#">
+                <span class="icon-next2"></span>
+              </a>
+            </li>
+          </ul>
+        </div>
+		  </div>
+	 </div>
 </div>
