--- a/www/_themes/propio/templates/blog.html
+++ b/www/_themes/propio/templates/blog.html
@@ -2,7 +2,7 @@
 <div class="main-content">
   <div class="wrapper">
     <div class="inner-wrapper">
-      <div class="gi two-thirds inline-block">
+      <div class="gi two-thirds main-blog">
         <ul>
         {{ entries:listing folder="blog" limit="6" sort_dir="desc" paginate="true" }}
           <li class="post-box">
@@ -26,37 +26,21 @@
           </li>
          {{ /entries:listing }}
         </ul>
-        <section>
-        {{ entries:pagination }}
-          {{ if previous_page }}
-            <a href="{{ previous_page }}" class="more">Previous Page</a>
-            <span class="icon icon-long-arrow-left"></span>
-          {{ endif }}
-          {{ if next_page }}
-            <a href="{{ next_page }}" class="more">Next Page</a>
-             <span class="icon icon-arrow-right"></span>
-          {{ endif }}
-        {{ /entries:pagination }}
-        </section>
       </div>{{ theme:partial src="sidebar" }}
-      <div class="pagination">
-        <ul class="pag-list">
-          <li>
-            <a href="#">
-              <span class="icon-prev2"></span>
-            </a>
-          </li><li>
-            <a href="#">1</a>
-          </li><li>
-            <a href="#">2</a>
-          </li><li>
-            <a href="#">3</a>
-          </li><li>
-            <a href="#">
-              <span class="icon-next2"></span>
-            </a>
-          </li>
-        </ul>
-      </div>
+
+      {{ entries:pagination folder="blog" limit="6" }}
+        {{ if next_page || previous_page }}
+          <div class="pagination">
+            <div class="pag-list">
+              {{ if next_page}}
+                <a href="{{ next_page }}" class="older"><span class="icon-prev2"></span><span class="text">Posts antiguos</span></a>
+              {{ endif }}
+              {{ if previous_page }}
+                <a href="{{ previous_page }}" class="newer">Posts nuevos<span class="icon-next2"></span></a>
+              {{ endif }}
+            </div>
+          </div>
+        {{ endif }}
+      {{ /entries:pagination }}
   </div>
 </div>
