--- a/www/_themes/propio/layouts/default.html
+++ b/www/_themes/propio/layouts/default.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en">
 {{ if is_dev }}
 <!--
@@ -13,7 +13,6 @@ debug information
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-		
 		<title>
 			{{ _site_name }}
 			{{ if segment_1 }}
@@ -23,6 +22,28 @@ debug information
 
 		<!-- styles -->
 		{{ theme:css tag="true" }}
+
+    <!--[if lt IE 9]>
+      <script src='js/dependencies/html5shiv.js'></script>
+    <![endif]-->
+
+     <!--[if IE 8]>
+     	{{ theme:css src="ie8" tag="true"}}
+    <![endif]-->
+
+    <!--[if IE]>
+    <script type="text/javascript">
+     document.createElement("nav");
+     document.createElement("header");
+     document.createElement("footer");
+     document.createElement("section");
+     document.createElement("figure");
+     document.createElement("article");
+     document.createElement("aside");
+     document.createElement("hgroup");
+     document.createElement("iframe");
+    </script>
+    <![endif]-->
 
 		<!-- favicon -->
 		<link rel="shortcut icon" type="image/png" href="{{ theme:img src="favicon2.png" }}">
@@ -50,6 +71,6 @@ debug information
 
 			{{ theme:partial src="footer" }}
 
-		</div>		
+		</div>
 	</body>
 </html>
